<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_navigation_home"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/selector_navigation_community"
        android:title="@string/menu_community"/>
    <item
        android:id="@+id/navigation_add_food"
        android:title="@string/menu_add_food"/>
    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/selector_navigation_store"
        android:title="@string/menu_store"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/selector_navigation_profile"
        android:title="@string/menu_profile"/>
</menu>